--- a/quasar/quasar.csproj
+++ b/quasar/quasar.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="ConsoleTables" Version="2.5.0" />
 		<PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+		<PackageReference Include="YamlDotNet" Version="13.3.1" />
 	</ItemGroup>
 
 </Project>
