--- a/quasar/quasar.csproj
+++ b/quasar/quasar.csproj
@@ -13,4 +13,9 @@
 		<PackageReference Include="YamlDotNet" Version="13.3.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Templates\" />
+	  <Folder Include="Pages\Shared\" />
+	</ItemGroup>
+
 </Project>
